--- a/src/views/components/carles.html
+++ b/src/views/components/carles.html
@@ -5,9 +5,9 @@
     <img class="w-full" src="assets/images/carles-945w.jpg?as=webp" type="image/webp" alt="Logo Three of us" width="945" height="798">
   </picture>
 
-  <h2 class="item-title">Carles Melgarejo</h2>
+  <h2 class="title">Carles Melgarejo</h2>
 
-  <h3 class="item-subtitle">GUITARS & VOCALS</h3>
+  <h3 class="subtitle">GUITARS & VOCALS</h3>
 
   <p class="max-w-near-3xl mx-auto mb-8 px-12 text-xl leading-near-relaxed md:text-xl">
     Toca la guitarra i l’harmònica des de fa més de 30 anys. Ha tocat també la mandolina
