--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -9,7 +9,7 @@
  * Import variables
  */
 
-@import "variables";
+// @import "variables";
 
 /**
  * Import npm dependencies
@@ -26,7 +26,7 @@
  * It's a best practice to use a different partial for each page
  */
 
-@import "layouts/home";
+// @import "layouts/home";
 
 /**
  * Do NOT include anything else in this file!
