--- a/src/views/header.html
+++ b/src/views/header.html
@@ -3,7 +3,7 @@
   <div class="max-w-screen-xl mx-auto md:flex md:justify-between md:h-24 md:pt-8 md:pr-near-16 md:pb-near-6 md:pl-20 lg:h-28 lg:pr-17">
     <!-- HEADER LOGO -->
     <a href="/" class="md:hover:opacity-70">
-      <img class="w-logo-xs md:w-logo-md md:ml-0 mx-auto lg:w-logo-lg lg:ml-2 2xl:ml-10" src="assets/images/three-of-us-logo-new_white.svg" loading="lazy" width="239" height="34">
+      <img class="w-xs md:w-md md:ml-0 mx-auto lg:w-lg lg:ml-2 2xl:ml-10" src="assets/images/three-of-us-logo-new_white.svg" loading="lazy" width="239" height="34">
     </a>
 
     <!-- HAMBURGER MENÚ -->
