--- a/src/views/components/gigs.html
+++ b/src/views/components/gigs.html
@@ -1,13 +1,13 @@
 <!-- GIGS COMPONENT -->
-<div class="w-1/2 bg-primary py-near-6 md:w-full md:row-start-4 md:-row-end-5 md:col-start-1 md:col-end-2">
-  <p class="text-base leading-near-relaxed font-bold mb-0 text-center text-white md:text-2xl md:leading-near-tight">
+<div class="w-1/2 bg-primary py-28/5 md:w-full md:row-start-4 md:-row-end-5 md:col-start-1 md:col-end-2">
+  <p class="text-base leading-loose font-bold mb-0 text-center text-white md:text-3xl md:leading-tight">
     Properes<br>
     dates
   </p>
 </div>
 
-<div class="w-1/2 py-near-6 absolute bottom-0 right-0 md:static md:w-full md:bg-white md:row-start-4 md:-row-end-5 md:col-start-2 md:col-end-3">
-  <p class="text-base leading-near-relaxed font-bold mb-0 text-center text-black md:text-2xl md:leading-near-tight">
+<div class="w-1/2 py-28/5 absolute bottom-0 right-0 md:static md:w-full md:bg-white md:row-start-4 md:-row-end-5 md:col-start-2 md:col-end-3">
+  <p class="text-base leading-loose font-bold mb-0 text-center text-black md:text-3xl md:leading-tight">
     <time class="js-time" datetime="2022-11-19">19/11/2022</time><br>
     La Garrafa
   </p>
