--- a/src/views/components/albert.html
+++ b/src/views/components/albert.html
@@ -9,13 +9,13 @@
 
   <h3 class="subtitle">DRUMS & VOCALS</h3>
 
-  <p class="max-w-near-3xl mx-auto mb-8 px-12 text-xl leading-near-relaxed md:text-xl">
+  <p class="max-w-3xl mx-auto mb-8 px-12 text-xl leading-loose md:text-xl">
     Toca la bateria des de fa més de 30 anys. Ha tocat també el clarinet i ha gravat
     1 Cds amb el grup de rock progressiu Barrock, amb qui té també temes publicats
     a Spotify.
   </p>
 
-  <p class="hidden max-w-near-3xl mx-auto mb-8 px-12 text-xl leading-near-relaxed md:text-xl" id="collapseAlbert">
+  <p class="hidden max-w-3xl mx-auto mb-8 px-12 text-xl leading-loose md:text-xl" id="collapseAlbert">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur non neque quis
     nisi pretium mollis quis ut nisl. Proin vitae lorem molestie, rutrum neque nec,
     porta eros. Fusce dignissim eget ligula pharetra placerat. Aliquam erat volutpat.
