--- a/src/views/components/carles.html
+++ b/src/views/components/carles.html
@@ -9,12 +9,12 @@
 
   <h3 class="subtitle">GUITARS & VOCALS</h3>
 
-  <p class="max-w-near-3xl mx-auto mb-8 px-12 text-xl leading-near-relaxed md:text-xl">
+  <p class="max-w-3xl mx-auto mb-8 px-12 text-xl leading-loose md:text-xl">
     Toca la guitarra i l’harmònica des de fa més de 30 anys. Ha tocat també la mandolina
     i el baix i ha gravat 4 Cds amb grups com Barrock, Tradivàrius i Duran&Cia.
   </p>
 
-  <p class="hidden max-w-near-3xl mx-auto mb-8 px-12 text-xl leading-near-relaxed md:text-xl" id="collapseCarles">
+  <p class="hidden max-w-3xl mx-auto mb-8 px-12 text-xl leading-loose md:text-xl" id="collapseCarles">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur non neque quis
     nisi pretium mollis quis ut nisl. Proin vitae lorem molestie, rutrum neque nec,
     porta eros. Fusce dignissim eget ligula pharetra placerat. Aliquam erat volutpat.
