--- a/src/views/components/xavi.html
+++ b/src/views/components/xavi.html
@@ -9,13 +9,13 @@
 
   <h3 class="subtitle">BASS & VOCALS</h3>
 
-  <p class="max-w-near-3xl mx-auto mb-8 px-12 text-xl leading-near-relaxed md:text-xl">
+  <p class="max-w-3xl mx-auto mb-8 px-12 text-xl leading-loose md:text-xl">
     Toca la guitarra i el baix des de fa més de 30 anys. Llicenciat per l’ESMUC, ha
     gravat 4 Cds amb grups com Barrock, Tradivàrius i Duran&Cia i ha composat diverses
     bandes sonores per films, documentals, etc.
   </p>
 
-  <p class="hidden max-w-near-3xl mx-auto mb-8 px-12 text-xl leading-near-relaxed md:text-xl" id="collapseXavi">
+  <p class="hidden max-w-3xl mx-auto mb-8 px-12 text-xl leading-loose md:text-xl" id="collapseXavi">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur non neque quis
     nisi pretium mollis quis ut nisl. Proin vitae lorem molestie, rutrum neque nec,
     porta eros. Fusce dignissim eget ligula pharetra placerat. Aliquam erat volutpat.
