--- a/src/views/header.html
+++ b/src/views/header.html
@@ -1,6 +1,6 @@
 <!-- HEADER -->
-<header class="h-screen-20 bg-black items-center space-x-4 shadow-md sticky top-0 z-10 pt-near-11 md:pt-0 md:h-auto">
-  <div class="max-w-screen-xl mx-auto md:flex md:justify-between md:h-24 md:pt-8 md:pr-near-16 md:pb-near-6 md:pl-20 lg:h-28 lg:pr-17">
+<header class="h-screen-20 bg-black items-center space-x-4 shadow-md sticky top-0 z-10 pt-54/5 md:pt-0 md:h-auto">
+  <div class="max-w-screen-xl mx-auto md:flex md:justify-between md:h-24 md:pt-8 md:pr-84/5 md:pb-28/5 md:pl-20 lg:h-28 lg:pr-82/5">
     <!-- HEADER LOGO -->
     <a href="/" class="md:hover:opacity-70">
       <img class="w-xs md:w-md md:ml-0 mx-auto lg:w-lg lg:ml-2 2xl:ml-10" src="assets/images/three-of-us-logo-new_white.svg" loading="lazy" width="239" height="34">
@@ -8,47 +8,47 @@
 
     <!-- HAMBURGER MENÚ -->
     <nav class="">
-      <div class="text-white pt-8 pr-near-6 pb-8 pl-near-6 text-near-5xl font-bold no-underline absolute top-0 left-0 md:hidden js-open">&#9776;</div>
-      <div class="text-white pt-8 pr-near-6 pb-8 pl-near-6 text-near-5xl font-bold no-underline absolute top-0 left-5px hidden js-close">&#9747;</div>
+      <div class="text-white pt-8 pr-28/5 pb-8 pl-28/5 text-7xl font-bold no-underline absolute top-0 left-0 md:hidden js-open">&#9776;</div>
+      <div class="text-white pt-8 pr-28/5 pb-8 pl-28/5 text-7xl font-bold no-underline absolute top-0 left-5px hidden js-close">&#9747;</div>
 
       <!-- HEADER MENÚ -->
-      <aside class="w-0 bg-black absolute top-screen-19 left-0 overflow-hidden transition-all duration-500 ease-linear md:w-auto md:static md:pt-0 lg:pt-4 js-menu-content">
-        <ul class="bg-secondary pt-16 pb-near-16 pl-20 mb-4 md:m-0 md:p-0 md:block md:bg-black">
-          <li class="pt-near-5 pb-6 md:hidden">
-            <a class="text-white text-near-5xl-plus leading-near-tight mb-0 block font-extrabold uppercase md:text-xs lg:text-lg md:inline js-menu-permalink js-home" href="/">
+      <aside class="w-0 bg-black absolute top-screen-19.9 left-0 overflow-hidden transition-all duration-500 ease-linear md:w-auto md:static md:pt-0 lg:pt-4 js-menu-content">
+        <ul class="bg-secondary pt-16 pb-84/5 pl-20 mb-4 md:m-0 md:p-0 md:block md:bg-black">
+          <li class="pt-24/5 pb-6 md:hidden">
+            <a class="text-white text-8xl leading-tight mb-0 block font-extrabold uppercase md:text-xs lg:text-lg md:inline js-menu-permalink js-home" href="/">
               Home
             </a>
           </li>
 
-          <li class="pt-near-5 pb-6 md:inline-block md:px-near-5 md:py-0 md:text-sm lg:px-near-5-plus">
-            <a class="text-white text-near-5xl-plus leading-near-snug mb-0 block font-extrabold uppercase md:text-xs lg:text-lg md:hover:underline md:hover:text-primary md:hover:opacity-70 md:pr-near-2 md:inline js-menu-permalink js-membres" href="membres.html">
+          <li class="pt-24/5 pb-6 md:inline-block md:px-24/5 md:py-0 md:text-sm lg:px-26/5">
+            <a class="text-white text-8xl leading-snug mb-0 block font-extrabold uppercase md:text-xs lg:text-lg md:hover:underline md:hover:text-primary md:hover:opacity-70 md:pr-8/5 md:inline js-menu-permalink js-membres" href="membres.html">
               Banda
             </a>
           </li>
 
-          <li class="pt-near-5 pb-6 md:inline-block md:px-near-5 md:py-0 md:text-sm lg:px-near-5-plus">
-            <a class="text-white text-near-5xl-plus leading-normal mb-0 block font-extrabold uppercase md:text-xs lg:text-lg md:hover:underline md:hover:text-primary md:hover:opacity-70 md:pr-near-2 md:inline js-menu-permalink js-proposta" href="#">
+          <li class="pt-24/5 pb-6 md:inline-block md:px-24/5 md:py-0 md:text-sm lg:px-26/5">
+            <a class="text-white text-8xl leading-normal mb-0 block font-extrabold uppercase md:text-xs lg:text-lg md:hover:underline md:hover:text-primary md:hover:opacity-70 md:pr-8/5 md:inline js-menu-permalink js-proposta" href="#">
               La proposta
             </a>
           </li>
 
-          <li class="pt-near-5 pb-6 md:inline-block md:px-near-5 md:py-0 md:text-sm lg:px-near-5-plus">
-            <a class="text-white text-near-5xl-plus leading-near-none mb-0 block font-extrabold uppercase md:text-xs lg:text-lg md:hover:underline md:hover:text-primary md:hover:opacity-70 md:inline js-menu-permalink js-contacte" href="#">
+          <li class="pt-24/5 pb-6 md:inline-block md:px-24/5 md:py-0 md:text-sm lg:px-26/5">
+            <a class="text-white text-8xl leading-none mb-0 block font-extrabold uppercase md:text-xs lg:text-lg md:hover:underline md:hover:text-primary md:hover:opacity-70 md:inline js-menu-permalink js-contacte" href="#">
               Contacte
             </a>
           </li>
         </ul>
 
         <!-- SOCIAL MEDIA -->
-        <ul class="grid grid-cols-2 w-48 mr-auto ml-16 mb-0 pt-8 pb-near-14 pl-0 md:hidden">
+        <ul class="grid grid-cols-2 w-48 mr-auto ml-16 mb-0 pt-8 pb-64/5 pl-0 md:hidden">
           <li class="px-2 mb-0">
-            <a class="text-white text-6xl" href="#" target="_blank">
+            <a class="text-white text-10xl" href="#" target="_blank">
               <i class="fa-brands fa-facebook"></i>
             </a>
           </li>
 
           <li class="px-2 mb-0">
-            <a class="text-white text-6xl" href="#" target="_blank">
+            <a class="text-white text-10xl" href="#" target="_blank">
               <i class="fa-brands fa-youtube"></i>
             </a>
           </li>
